# portfolio

./: huffmanReport.c  norm.py
algo-trade/funding_rate/: Cargo.toml
algo-trade/funding_rate/examples/: hyperliquid.rs  spot_prices.rs  test_hyperliquid_debug.rs  test_hyperliquid_fixed.rs
algo-trade/funding_rate/src/: main.rs  store.rs
algo-trade/funding_rate/src/collector/: bitbank.rs  gmo.rs  hyperliquid.rs  kraken.rs  mod.rs
algo-trade/funding_rate/src/strategy/: strategy.rs
kyudo_v2/: config.py  detector.py  judge.py  kyudo_result.csv  main.py  score_manager.py
recoginize_image/: check_run.py  train.py
recoginize_image/runs/detect/kyudo_model/: args.yaml
recoginize_image/runs/detect/kyudo_model2/: args.yaml  results.csv
recoginize_image/runs/detect/kyudo_model3/: args.yaml  results.csv
scotland_yard/: main.py  map.json
sync/: a.out  archive.sh  backup.sh  make_link.sh  search_str.c  sync.sh
文化祭/通信/: TCP_Accept_v3.py  TCP_Send_v3.py
