[package]
name = "funding_rate"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.36"
log = "0.4"
env_logger = "0.11"
dashmap = "6.1"
reqwest = { version = "0.13.1", features = ["json"] }
toml = "0.8"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
